--- a/eatgo-api/build.gradle
+++ b/eatgo-api/build.gradle
@@ -20,9 +20,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.h2database:h2'
 	implementation 'junit:junit:4.12'
-	implementation 'junit:junit:4.12'
-	compileOnly 'org.projectlombok:lombok'
+	//implementation 'junit:junit:5.7'
+
+	/*implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'*/
+    compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
