--- a/eatgo-customer-api/build.gradle
+++ b/eatgo-customer-api/build.gradle
@@ -19,28 +19,18 @@ repositories {
 }
 
 dependencies {
+    implementation project(':eatgo-common')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
     implementation 'junit:junit:4.12'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    //implementation 'junit:junit:5.7'
 
-    /*implementation 'junit:junit:4.12'
-    implementation 'junit:junit:4.12'*/
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-}
-
-jar {
-    enabled = true;
-}
-
-bootJar {
-    enabled = false;
 }
 
 tasks.named('test') {
