--- a/eatgo-customer-api/build.gradle
+++ b/eatgo-customer-api/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
     implementation project(':eatgo-common')
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
     implementation 'junit:junit:4.12'
