--- a/eatgo-common/build.gradle
+++ b/eatgo-common/build.gradle
@@ -22,12 +22,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.7'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.7'
+
     implementation 'junit:junit:4.12'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    //implementation 'junit:junit:5.7'
 
-    /*implementation 'junit:junit:4.12'
-    implementation 'junit:junit:4.12'*/
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
