--- a/eatgo-customer-api/build.gradle
+++ b/eatgo-customer-api/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.7'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.7'
+
     implementation 'com.h2database:h2'
     implementation 'junit:junit:4.12'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
